--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.10.0",
     "genkit": "^1.20.0",
+    "glob": "^13.0.0",
     "lucide-react": "^0.475.0",
-    "next": "15.3.3",
+    "next": "^16.0.5",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
-    "react": "^18.3.1",
+    "react": "^19.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "resend": "^3.5.0",
@@ -66,6 +67,7 @@
     "@types/react-dom": "^18",
     "genkit-cli": "^1.20.0",
     "postcss": "^8",
+    "rimraf": "^6.1.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
