--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@genkit-ai/google-genai": "^1.20.0",
     "@genkit-ai/next": "^1.20.0",
-    "@hookform/resolvers": "^4.1.3",
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -47,12 +47,12 @@
     "genkit": "^1.20.0",
     "glob": "^13.0.0",
     "lucide-react": "^0.475.0",
-    "next": "^16.0.5",
+    "next": "14.2.5",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
-    "react": "^19.2.0",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.2.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "resend": "^3.5.0",
