--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,36 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
 
-# testing
-/coverage
-
-# next.js
+# Build artifacts
 /.next/
 /out/
 
-# production
-/build
+# Local environment variables
+.env.local
+.env*.local
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# vercel
-.vercel
+# Test coverage
+/coverage
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# IDE specific
+.idea
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
-.genkit/*
-.env*
+# macOS
+.DS_Store
 
-# firebase
-firebase-debug.log
-firestore-debug.log
+# Misc
+.swp
+*.pem
