--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,38 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Dependencies
+# dependencies
 /node_modules
+/.pnp
+.pnp.js
 
-# Build artifacts
+# testing
+/coverage
+
+# next.js
 /.next/
 /out/
 
-# Local environment variables
-.env.local
-.env*.local
+# production
+/build
 
-# Logs
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
-# Test coverage
-/coverage
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# IDE specific
-.idea
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# vercel
+.vercel
 
-# macOS
-.DS_Store
-
-# Misc
-.swp
-*.pem
+# typescript
+*.tsbuildinfo
+next-env.d.ts
