--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "framework": "nextjs",
+  "git": {
+    "deploymentEnabled": {
+      "main": true
+    }
+  },
   "rewrites": [
     { "source": "/:path*", "destination": "/:path*" }
   ]
