--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "test": "next build"
   },
   "dependencies": {
-    "@genkit-ai/google-genai": "^0.4.0",
-    "@genkit-ai/next": "1.0.0",
+    "@genkit-ai/googleai": "0.5.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -45,7 +44,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.10.0",
-    "genkit": "1.0.0",
+    "genkit": "0.5.0",
     "glob": "^13.0.0",
     "lucide-react": "^0.475.0",
     "next": "14.2.5",
@@ -65,7 +64,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "genkit-cli": "1.0.0",
+    "genkit-cli": "0.5.17",
     "postcss": "^8",
     "rimraf": "^6.1.2",
     "tailwindcss": "^3.4.1",
